k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizsgaremek-inventory-db
  namespace: holbok-peter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vizsgaremek-inventory-db
  template:
    metadata:
      labels:
        app: vizsgaremek-inventory-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command: ["sh", "-c", "mysqladmin ping -h 127.0.0.1 -uroot -proot"]
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["sh", "-c", "mysqladmin ping -h 127.0.0.1 -uroot -proot"]
            initialDelaySeconds: 40
            periodSeconds: 20
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: vizsgaremek-inventory-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vizsgaremek-inventory-db
  namespace: holbok-peter
spec:
  selector:
    app: vizsgaremek-inventory-db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
