k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizsgaremek-inventory-backend
  namespace: holbok-peter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vizsgaremek-inventory-backend
  template:
    metadata:
      labels:
        app: vizsgaremek-inventory-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/kerpics-katrin-rebeka/leltarsupport-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: vizsgaremek-inventory-backend
  namespace: holbok-peter
spec:
  selector:
    app: vizsgaremek-inventory-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vizsgaremek-inventory-backend-ingress
  namespace: holbok-peter
spec:
  ingressClassName: nginx
  rules:
    - host: holbok-peter-inventory-backend.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vizsgaremek-inventory-backend
                port:
                  number: 8000
