k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizsgaremek-inventory-frontend
  namespace: holbok-peter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vizsgaremek-inventory-frontend
  template:
    metadata:
      labels:
        app: vizsgaremek-inventory-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/kerpics-katrin-rebeka/leltarsupport-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: vizsgaremek-inventory-frontend
  namespace: holbok-peter
spec:
  selector:
    app: vizsgaremek-inventory-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vizsgaremek-inventory-frontend-ingress
  namespace: holbok-peter
spec:
  ingressClassName: nginx
  rules:
    - host: vizsgaremek-inventory-frontend.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vizsgaremek-inventory-frontend
                port:
                  number: 80
